# PP_Labs

./: .gitignore
CMake_Lab2/: CMakeLists.txt  README.md
CMake_Lab2/lib/: ArrayFunctions.cpp  ArrayFunctions.h
CMake_Lab2/main/: CMakeLists.txt  CMake_Lab2.h  main.cpp
CMake_Lab2/tests/: CMakeLists.txt  tests.cpp
LAB_XML_2/: pom.xml
LAB_XML_2/data/: library.xml  library.xsd
Lab 1/: Creator.cpp  Main.cpp  Reporter.cpp  employee.h
Lab 2/: CMakeLists.txt  README.md
Lab 2/lib/: ArrayFunctions.cpp  CMakeLists.txt
Lab 2/main/: CMakeLists.txt  CMake_Lab2.h  main.cpp
Lab 2/tests/: tests.cpp
Lab 3/: CMakeLists.txt
Lab 3/OS_Lab3/: CMakeLists.txt  winapi.h
Lab 3/tests/: CMakeLists.txt  test.cpp
Lab 4/receiver/: CMakeLists.txt  receiver.h  receiver_func.cpp
Lab 4/sender/: CMakeLists.txt  sender.h  sender_func.cpp
Lab 4/tests/: CMakeLists.txt  tests.cpp
Lab 5/: CMakeLists.txt  Lab  5.sln  README.md
Lab 5/Client/: Client.hpp  Client.vcxproj  Client.vcxproj.filters  ClientFunctions.cpp  main.cpp
Lab 5/Common/: Entities.hpp
Lab 5/Lab  5/: Lab  5.vcxproj
Lab 5/Server/: 3  Server.hpp  Server.vcxproj  Server.vcxproj.filters  ServerFunctions.cpp  main.cpp
Lab 5/ServerTests/: ServerTests.cpp  ServerTests.vcxproj  ServerTests.vcxproj.filters
OS_Lab1/: Creator.cpp  Main.cpp  README.md  Reporter.cpp
OS_Lab2/OS_Lab2/: OS_Lab2.cpp
OS_Lab3/: CMakeLists.txt  README.md
OS_Lab3/OS_Lab3/: CMakeLists.txt  main.cpp  main.h  winapi.cpp  winapi.h
OS_Lab3/tests/: CMakeLists.txt  test.cpp
OS_Lab4/: CMakeLists.txt
OS_Lab4/receiver/: CMakeLists.txt  receiver.cpp  receiver.h  receiver_func.cpp
OS_Lab4/sender/: CMakeLists.txt  sender.cpp  sender.h  sender_func.cpp
OS_Lab4/tests/: tests.cpp
PP_Design_patterns/: README.md  pom.xml
PP_Internationalization/: README.md  pom.xml
PP_KR1/: hotel.txt  pom.xml
PP_KR1/allure-results/: 0c730f82-c254-4139-917b-f7cd5111bc50-result.json  1946625d-7694-494f-a57f-e9b799bfd84e-result.json  1b4b711d-6ee7-48f2-979c-4c6b1927ed01-container.json  2269159d-d439-4d74-891f-5fa5e87fa899-result.json  2f8381a0-ae7b-46c0-9273-dbd778e93cb2-result.json  3734db10-4174-458e-b40b-47f2a910890b-container.json  38b7f03f-5401-44c4-a3cd-21e677175c2c-container.json  3c5cf7a8-37cb-4da7-a096-803197b7a314-result.json  47598ade-e2c2-4003-94d4-e9f3a33a9684-container.json  49329260-cd7c-45da-a0a8-a5c66a73aa1f-result.json  49a7d5d2-dcf1-4984-b8ce-0bbe0e4b5b75-result.json  4d0ecd85-551a-4cc9-a911-a46ced6868e1-container.json  503cf813-8425-4a34-861d-ed172dd7813b-result.json  533236d5-7174-4667-b49c-a03dad6f567c-result.json  54dce2ac-acc9-4b11-b384-0e180d2ec8d6-container.json  62605414-ac94-4b3a-abf9-e38a2c4aaa6b-result.json  6a797c8a-9955-4dc6-8bb6-7c9e435d60c1-container.json  766b8d9b-139b-4840-9100-6abed8367a75-container.json  8e392d7e-2b66-4cbc-a409-8f7b011fcefd-container.json  ae755b84-8d36-442e-b15b-ea57d5d5d8d9-result.json  bea47fb1-8412-44cf-a454-c200c9b20ce5-container.json  d3701328-7bf5-41e1-88f7-669be088d9e6-container.json  da3ef1f8-cd8e-4cde-b0a7-5cc94e1456b7-container.json  e1312d09-2ade-4ade-b755-5ccb6f26d1fe-result.json  e4078bca-f04c-4671-854e-0525a970d3cc-result.json  e60c1e5a-ecac-4f9c-ba1d-66a5d2846ebf-result.json  f298f464-c677-4d68-8b9e-b2031a2749e4-container.json  f3900874-13c9-46f4-bae1-ed6c67a6b99d-container.json  f6e45ac3-7b77-45d0-a331-f4e5c76de732-container.json  ffe17f05-4945-43da-8c60-5d6853de4f4a-container.json
PP_KR_1/: pom.xml
PP_RecordBook/: README.md  input.json  input.txt  output.json  output.txt  pom.xml
PP_RecordBook/allure-results/: 0287c8dc-05cf-4477-bbcb-6c070b679ef4-result.json  044dafed-af8c-40f1-ae43-a7d5f25d4074-container.json  136d440b-f3cb-44ca-b67f-68069b7662ec-container.json  14471dce-4eac-403f-86f0-9cc081ff8335-result.json  15ea0c0c-e0ef-4450-86b9-0c34a946265c-result.json  1a787ff7-a6be-4196-8a72-7d750dd5b4f2-result.json  2c4017aa-b1b3-4554-8ca3-07e0bca05d01-result.json  32926925-7afb-4344-b86c-5f08617f3809-result.json  38224f32-46f7-4c97-a6d4-d32c60d67d8d-result.json  40a3f74a-3caa-43f0-8c54-ebb84931c034-result.json  4329b11f-79c2-4945-87a4-10d3076d9066-container.json  44e63a21-3da5-4fe7-8448-acebf94b9fdd-container.json  48b6010b-18dc-46be-b50b-5a4085786bcb-container.json  4ab17a1b-7c66-4894-a7cf-efb1401d6498-result.json  4ee2387f-3aef-409c-b46b-f5bbaf2ae46f-container.json  4f7fe785-31d5-45df-b897-775fdf353987-result.json  505910cc-f676-408a-bafb-86ef6e30a848-container.json  5598bf01-eb66-47d4-8fd8-050ab1802eba-container.json  6344b39a-f70e-4710-bab5-f40598d7f61a-container.json  7e634a1f-870b-4150-b31b-f9aeb796cc59-result.json  7fec12e4-1563-4f04-a142-02fb3cd646d7-container.json  828ed4f9-a477-4a9c-b645-bb33dd26298c-result.json  89e15467-4644-49ee-b4f3-2abff55c1607-container.json  8bf36c22-d8a3-4916-b720-d29169fcb167-container.json  8d7dc2f9-b19b-463a-8e79-799e7dec1cb0-container.json  95876e0a-19f5-43a9-98b1-02ee4933391e-container.json  ae4d9d71-5d68-4baf-8b92-54557d43d3b4-container.json  bc398acc-b737-42bf-9c70-c05a8e323586-result.json  c7af0584-c271-460d-a3ef-00617449a19d-container.json  cacf11e9-4f50-4291-8da5-d96283853827-result.json  cd40971c-25e8-417b-a316-b53a4bd5c2e6-result.json  daa4c285-3b11-485f-8c78-32085dc57386-result.json  ddb0ef54-c48f-461b-8e29-f5b72136b1c2-container.json  f485ddba-f493-491a-84e5-66f4d1270fd9-container.json
PP_SR_2/: pom.xml
PP_Sort_Vizualization/: pom.xml
PP_Strategy/: README.md  pom.xml
PP_String/: pom.xml
PP_XML/: README.md  pom.xml
PP_XML/data/: library.xml  library.xsd
PP_lab1/: README.md
PP_lab1/src/: TaylorRow.java
PP_lab2/: README.md  pom.xml
PP_lab3/: README.md  pom.xml
PP_lab_4.1/: README.md  f1.txt  f2.txt  pom.xml  t.txt
PP_lab_5_Graph/: README.md  pom.xml
PP_lab_5_ListString/: README.md  poem.txt  pom.xml  sorted_poem.txt
PP_lab_String/: README.md  pom.xml
PP_lab_Text_format/: f.txt  i.txt  input.txt  output.txt  pom.xml
PP_lab_Text_format/allure-results/: 0982d57e-f0b7-46eb-ab53-3ac306519878-container.json  0ab0a914-d3d0-46fb-b8ee-538c821372e9-container.json  (+131 more)
firstprog/: README.md
firstprog/src/: Calculator.java
(+127 files in other folders)
